# pio-esp32-tfmicro-example

./: README.md  log.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
src/: CMakeLists.txt  main.cpp  main_functions.cpp
src/esp-nn-test-funcs/: convolution_test.c
